feat: added public field for cards. Next step are decks
