# deck/internal/controller/controller.go
@@ -2,14 +2,16 @@ package controller
 
 import (
 	"github.com/google/uuid"
-	models "github.com/tomatoCoderq/deck/pkg/model"
+	// models "github.com/tomatoCoderq/deck/pkg/model"
+	"github.com/GOeda-Co/proto-contract/model/deck"
+	modelCard"github.com/GOeda-Co/proto-contract/model/card"
 )
 
 type Deck interface {
-	AddDeck(deck *models.Deck) (*models.Deck, error)
-	ReadAllDecksOfUser(userId uuid.UUID) ([]models.Deck, error)
-	ReadAllCardsFromDeck(deckId uuid.UUID, userId uuid.UUID) ([]models.Card, error)
-	ReadDeck(deckId uuid.UUID, userId uuid.UUID) (*models.Deck, error)
+	AddDeck(deck *model.Deck) (*model.Deck, error)
+	ReadAllDecksOfUser(userId uuid.UUID) ([]model.Deck, error)
+	ReadAllCardsFromDeck(deckId uuid.UUID, userId uuid.UUID) ([]modelCard.Card, error)
+	ReadDeck(deckId uuid.UUID, userId uuid.UUID) (*model.Deck, error)
 	DeleteDeck(deckId uuid.UUID, userId uuid.UUID) error
 	AddCardToDeck(cardId uuid.UUID, deckId uuid.UUID, userId uuid.UUID) error
 }
